# caspi

./: .gitignore  pyproject.toml
.github/: copilot-instructions.md
docs/: string_array_support_proposal.md
src/caspi/: spark.py
src/caspi/torch/: __init__.py  helpers.py  loader.py
tests/: conftest.py
tests/caspi/: test_prefetch.py  test_string_array_loader.py  test_torch.py  test_torch_additional.py
