[project]
name = "caspi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "James Cunningham", email = "james@notbadafterall.com" }
]
requires-python = ">=3.11"
dependencies = [
    "pyspark>=3.5",
    "torch>=2.3",
    "pyarrow>=14.0", # Added pyarrow
    "numpy>=2",
    "cloudpickle>=3",
    "pandas>=2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pyarrow-stubs>=19.1",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "transformers>=4.51.3",
]

[tool.mypy]
mypy_path = "typings:src" # Add typings and src directories to MyPy's search path
check_untyped_defs = true
disallow_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
